base/rhino-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhino-deployment
  namespace: rhino-test
  labels:
    app: rhino
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rhino
  template:
    metadata:
      labels:
        app: rhino
    spec:
      containers:
        - name: rhino
          image: southamerica-east1-docker.pkg.dev/diesel-talon-387022/rhino/rhino:1eb4f03497e932b21b0fdb3f36e26657e0b7cd93
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - containerPort: 80
