base/rhino-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rhino-service
spec:
  selector:
    app: rhino
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
