base/rhino-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhino-ingress
spec:
  defaultBackend:
    service:
      name: rhino-service
      port:
        number: 80
  rules:
  - host: api-dev.rhinox.io
